web-deployment-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myWeb
  template:
    metadata:
      labels:
        app: myWeb
    spec:
      containers:
        - name: web-pod
          image: ighost0321/monologue-nginx:latest
          ports:
            - containerPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec: 
  type: ClusterIP
  selector:
    app: myWeb
  ports:
    - port: 80
      targetPort: 80
